--- a/aoc.ipynb
+++ b/aoc.ipynb
@@ -314,6 +314,72 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1681\n",
+      "201684\n"
+     ]
+    }
+   ],
+   "source": [
+    "#day 8\n",
+    "def read_data():\n",
+    "    path = 'data_day8.csv'\n",
+    "    with open(path) as f:\n",
+    "        data = f.read()\n",
+    "        return data.strip('\\n\\n')\n",
+    "\n",
+    "data = read_data()\n",
+    "data = data.split('\\n')\n",
+    "for index, line in enumerate(data):\n",
+    "    data[index] = list(line)\n",
+    "for index, line in enumerate(data):\n",
+    "    for index2, item in enumerate(line):\n",
+    "        line[index2] = int(item)\n",
+    "\n",
+    "\n",
+    "nb_col = len(data)\n",
+    "nb_ln = len(data[0])\n",
+    "nb_visible = 0\n",
+    "max_scenic_score = 0\n",
+    "for line in range(nb_col):\n",
+    "    for tree in range(nb_ln):\n",
+    "        list_north = [data[i][tree] for i in range(line)][::-1]\n",
+    "        list_south = [data[i][tree] for i in range(line+1, nb_col)]\n",
+    "        list_west = [data[line][i] for i in range(tree)][::-1]\n",
+    "        list_east = [data[line][i] for i in range(tree+1,nb_ln)]\n",
+    "\n",
+    "        tree_height = data[line][tree]\n",
+    "        west_visible=len(list_west) == 0 or tree_height > max(list_west)\n",
+    "        east_visible=len(list_east) == 0 or tree_height > max(list_east)\n",
+    "        north_visible=len(list_north) == 0 or tree_height > max(list_north)\n",
+    "        south_visible=len(list_south) == 0 or tree_height > max(list_south)\n",
+    "\n",
+    "        visible = west_visible or east_visible or north_visible or south_visible\n",
+    "        if visible == True:\n",
+    "            nb_visible += 1\n",
+    "\n",
+    "        scenic_score = 1\n",
+    "        tree_lines = [list_north, list_south, list_west, list_east]\n",
+    "        for direction in tree_lines:\n",
+    "            if len(direction) == 0:\n",
+    "                scenic_score = scenic_score * 0\n",
+    "            elif True not in [height >= tree_height for height in direction]:\n",
+    "                scenic_score = scenic_score * len(direction)\n",
+    "            else:\n",
+    "                scenic_score = scenic_score * (list(height >= tree_height for height in direction).index(True)+1)\n",
+    "        max_scenic_score = max(max_scenic_score, scenic_score)\n",
+    "print(nb_visible)\n",
+    "print(max_scenic_score)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
