--- a/aoc.ipynb
+++ b/aoc.ipynb
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -376,6 +376,81 @@
     "        max_scenic_score = max(max_scenic_score, scenic_score)\n",
     "print(nb_visible)\n",
     "print(max_scenic_score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2597\n"
+     ]
+    }
+   ],
+   "source": [
+    "#day 8\n",
+    "def read_data():\n",
+    "    path = 'data_day9.csv'\n",
+    "    with open(path) as f:\n",
+    "        data = f.read()\n",
+    "    data = data.strip('\\n\\n').split('\\n')\n",
+    "    return data\n",
+    "\n",
+    "\n",
+    "data = read_data()\n",
+    "\n",
+    "head_x_axis = 0\n",
+    "head_y_axis = 0\n",
+    "tail_x_axis = 0\n",
+    "tail_y_axis = 0\n",
+    "knots_position = [[0, 0] for i in range(1, 10)]\n",
+    "tail_positions = {(0, 0)}\n",
+    "\n",
+    "for instruction in data:\n",
+    "    direction, amount = instruction.split(' ')\n",
+    "    amount = int(amount)\n",
+    "    for _ in range(amount, 0, -1):\n",
+    "        if direction == 'U':\n",
+    "            head_y_axis += 1\n",
+    "        elif direction == 'D':\n",
+    "            head_y_axis -= 1\n",
+    "        elif direction == 'L':\n",
+    "            head_x_axis -= 1\n",
+    "        elif direction == 'R':\n",
+    "            head_x_axis += 1\n",
+    "        \n",
+    "        for knot_number, position in enumerate(knots_position):\n",
+    "            tail_x_axis, tail_y_axis = position\n",
+    "            if knot_number == 0:\n",
+    "                prev_knot_x_axis = head_x_axis\n",
+    "                prev_knot_y_axis = head_y_axis\n",
+    "            else:\n",
+    "                prev_knot_x_axis = knots_position[int(knot_number)-1][0]\n",
+    "                prev_knot_y_axis = knots_position[int(knot_number)-1][1]\n",
+    "\n",
+    "            y_diff = abs(prev_knot_y_axis - tail_y_axis)\n",
+    "            x_diff = abs(prev_knot_x_axis - tail_x_axis)\n",
+    "\n",
+    "            if y_diff == 2:\n",
+    "                tail_y_axis = int((tail_y_axis + prev_knot_y_axis) / 2)\n",
+    "            elif y_diff == 1:\n",
+    "                if x_diff == 2:\n",
+    "                    tail_y_axis = prev_knot_y_axis\n",
+    "            if x_diff == 2:\n",
+    "                tail_x_axis = int((tail_x_axis + prev_knot_x_axis) / 2)\n",
+    "            elif x_diff == 1:\n",
+    "                if y_diff == 2:\n",
+    "                    tail_x_axis = prev_knot_x_axis\n",
+    "            knots_position[knot_number] = [tail_x_axis, tail_y_axis]\n",
+    "        \n",
+    "        tail_positions.add((knots_position[-1][0], knots_position[-1][1]))\n",
+    "\n",
+    "print(len(tail_positions))\n",
+    "    \n"
    ]
   },
   {
