--- a/aoc.ipynb
+++ b/aoc.ipynb
@@ -392,7 +392,7 @@
     }
    ],
    "source": [
-    "#day 8\n",
+    "#day 9\n",
     "def read_data():\n",
     "    path = 'data_day9.csv'\n",
     "    with open(path) as f:\n",
@@ -451,6 +451,72 @@
     "\n",
     "print(len(tail_positions))\n",
     "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "####.####..##..####.###..#..#.###..####.\n",
+      "#....#....#..#.#....#..#.#..#.#..#.#....\n",
+      "###..###..#....###..#..#.#..#.#..#.###..\n",
+      "#....#....#.##.#....###..#..#.###..#....\n",
+      "#....#....#..#.#....#.#..#..#.#.#..#....\n",
+      "####.#.....###.####.#..#..##..#..#.####.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#day 10\n",
+    "def read_data():\n",
+    "    path = 'data_day10.csv'\n",
+    "    with open(path) as f:\n",
+    "        data = f.read()\n",
+    "    data = data.strip('\\n\\n').split('\\n')\n",
+    "    return data\n",
+    "\n",
+    "def signal_strength(cycle, X):\n",
+    "    if abs((cycle-1)%40 - X) < 2:\n",
+    "        ss = '#'\n",
+    "    else:\n",
+    "        ss = '.'\n",
+    "    if (cycle)%40 == 0 and cycle-1 != 0:\n",
+    "        ss = ss+'\\n'\n",
+    "    return ss\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "data = read_data()\n",
+    "cycle = 0\n",
+    "X = 1\n",
+    "signal = ''\n",
+    "\n",
+    "for instruction in data:\n",
+    "    if instruction == 'noop':\n",
+    "        cycle +=1\n",
+    "        signal += signal_strength(cycle, X)\n",
+    "        # print(cycle, X, instruction)\n",
+    "        # print(signal)\n",
+    "    else:\n",
+    "        command, value = instruction.split(' ')\n",
+    "        value = int(value)\n",
+    "        cycle += 1\n",
+    "        signal += signal_strength(cycle, X)\n",
+    "        # print(cycle, X, instruction)\n",
+    "        # print(signal)\n",
+    "        cycle += 1\n",
+    "        signal += signal_strength(cycle, X)\n",
+    "        # print(cycle, X, instruction)\n",
+    "        # print(signal)\n",
+    "        X += value\n",
+    "print(signal)\n"
    ]
   },
   {
